crates/resolving/tests/snapshots/resolving__002_import_resolution_library.snap
---
source: crates/resolving/tests/resolving.rs
expression: report
snapshot_kind: text
---
module Library

Unqualified Imports:

Qualified Imports:

Exported Terms:
  - MkHideTy
  - libFn
  - MkLibTy
  - hideMe

Exported Types:
  - LibTy
  - HideTy

Local Terms:
  - MkHideTy
  - libFn
  - MkLibTy
  - hideMe

Local Types:
  - LibTy
  - HideTy
