crates/resolving/tests/snapshots/resolving__002_import_resolution_library_explicit.snap
---
source: crates/resolving/tests/resolving.rs
expression: report
snapshot_kind: text
---
module LibraryExplicit

Unqualified Imports:

Qualified Imports:

Exported Terms:
  - Id

Exported Types:
  - Id

Local Terms:
  - Id

Local Types:
  - Id

Errors:
