crates/resolving/tests/snapshots/resolving__003_import_errors_duplicate_local.snap
---
source: crates/resolving/tests/resolving.rs
expression: report
snapshot_kind: text
---
module DuplicateLocal

Unqualified Imports:

Qualified Imports:

Exported Terms:
  - value

Exported Types:
  - Data

Local Terms:
  - value

Local Types:
  - Data

Errors:
  - ExistingTerm { existing: (Idx::<File>(4), Idx::<TermItem>(0)), duplicate: (Idx::<File>(4), Idx::<TermItem>(1)) }
  - ExistingType { existing: (Idx::<File>(4), Idx::<TypeItem>(0)), duplicate: (Idx::<File>(4), Idx::<TypeItem>(1)) }
  - ExistingTerm { existing: (Idx::<File>(4), Idx::<TermItem>(0)), duplicate: (Idx::<File>(4), Idx::<TermItem>(1)) }
  - ExistingType { existing: (Idx::<File>(4), Idx::<TypeItem>(0)), duplicate: (Idx::<File>(4), Idx::<TypeItem>(1)) }
